==> spmaxsp/stm32_template_code/templates/ll_lib/stm32g0xx/spi.c <==
/**
 * @file spi.c
 * @brief ???
*/

// TEMPLATE CODE
// sets up basic SPI interface
// Requires the following to be defined/replaced:
// - SPI: the SPI peripheral to use
// - CLK_PIN and CLK_PORT
// - MISO_PIN and MISO_PORT
// - MOSI_PIN and MOSI_PORT


#include "spi.h"

void SPI_Init(void)
{
    LL_GPIO_InitTypeDef GPIO_InitStruct = {0};
    GPIO_InitStruct.Pin = CLK_PIN;
    GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
    GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_LOW;
    GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
    GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
    GPIO_InitStruct.Alternate = LL_GPIO_AF_0;
    LL_GPIO_Init(CLK_PORT, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = MISO_PIN;
    GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
    GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_LOW;
    GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
    GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
    GPIO_InitStruct.Alternate = LL_GPIO_AF_0;
    LL_GPIO_Init(MISO_PORT, &GPIO_InitStruct);

    GPIO_InitStruct.Pin = MOSI_PIN;
    GPIO_InitStruct.Mode = LL_GPIO_MODE_ALTERNATE;
    GPIO_InitStruct.Speed = LL_GPIO_SPEED_FREQ_LOW;
    GPIO_InitStruct.OutputType = LL_GPIO_OUTPUT_PUSHPULL;
    GPIO_InitStruct.Pull = LL_GPIO_PULL_NO;
    GPIO_InitStruct.Alternate = LL_GPIO_AF_0;
    LL_GPIO_Init(MOSI_PORT, &GPIO_InitStruct);


    LL_SPI_InitTypeDef SPI_InitStruct = {0};
    SPI_InitStruct.TransferDirection = LL_SPI_FULL_DUPLEX;
    SPI_InitStruct.Mode = LL_SPI_MODE_MASTER;
    SPI_InitStruct.DataWidth = LL_SPI_DATAWIDTH_16BIT;
    SPI_InitStruct.ClockPolarity = LL_SPI_POLARITY_LOW;
    SPI_InitStruct.ClockPhase = LL_SPI_PHASE_1EDGE;
    SPI_InitStruct.NSS = LL_SPI_NSS_SOFT;
    SPI_InitStruct.BaudRate = LL_SPI_BAUDRATEPRESCALER_DIV64;
    SPI_InitStruct.BitOrder = LL_SPI_MSB_FIRST;
    SPI_InitStruct.CRCCalculation = LL_SPI_CRCCALCULATION_DISABLE;
    SPI_InitStruct.CRCPoly = 7;
    LL_SPI_Init(SPI, &SPI_InitStruct);
    LL_SPI_SetStandard(SPI, LL_SPI_PROTOCOL_MOTOROLA);
    LL_SPI_DisableNSSPulseMgt(SPI);

    LL_SPI_Enable(SPI);

}

void SPI_Transmit(uint16_t data)
{
    LL_SPI_TransmitData16(SPI, data);
    while(!LL_SPI_IsActiveFlag_TXE(SPI));
}

uint16_t SPI_Receive()
{
    while(!LL_SPI_IsActiveFlag_RXNE(ALPHA_SPI));
    return LL_SPI_ReceiveData16(ALPHA_SPI);
}
